--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: #e5dfdf;
+  background-color: #ffffff;
   display: grid;
   grid-template-columns: 300px auto;
   grid-template-rows: 50px auto;
